--- a/src/modules/main/app/app.css
+++ b/src/modules/main/app/app.css
@@ -1,39 +1,29 @@
 div.app {
-	position: fixed;
-	width: 100vw;
-	height: calc(var(--vh, 1vh) * 100);
+  position: fixed;
+  width: 100vw;
+  height: calc(var(--vh, 1vh) * 100);
+  background-color: #ccc;
+}
+div.app > .container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 1rem;
 }
 div.view {
-	padding: 1rem;
-	padding: 0 0.5rem 3rem 0.5rem;
-	overflow: auto;
-	max-height: 100%;
-	margin: 3rem 0 0 0;
-	display: flex;
-	flex-direction: column;
-}
-
-div.toast {
-	top: 0px;
-	margin-top: 5rem;
-	position: absolute;
-	width: 100%;
-	z-index: 99999;
-	border: 1pt solid white;
-	visibility: visible;
-	opacity: 1;
-	transition: visibility 0.5s, opacity 0.5s linear;
-}
-div.toast.close {
-	visibility: hidden;
-	opacity: 0;
+  padding: 1rem;
+  padding: 0 0.5rem 3rem 0.5rem;
+  overflow: auto;
+  max-height: 100%;
+  margin: 3rem 0 0 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .center {
-	margin: auto 0;
-	text-align: center;
+  margin: auto 0;
+  text-align: center;
 }
 .container {
-	height: 100%;
+  height: 100%;
 }
-
